<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_mult"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_mult"
        app:layout_constraintBottom_toTopOf="@+id/button_div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintEnd_toStartOf="@+id/button_div"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_div"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_mult" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/button_eq"
        app:layout_constraintEnd_toStartOf="@+id/button_add"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_add"
        app:layout_constraintBottom_toTopOf="@+id/button_subst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_div" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_eq"
        app:layout_constraintStart_toEndOf="@+id/button_point"
        app:layout_constraintTop_toBottomOf="@id/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_eq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_subst"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        app:layout_constraintVertical_bias="0.528" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_subst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/_subst"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_eq"
        app:layout_constraintTop_toBottomOf="@+id/button_add" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin_text"
        android:gravity="end|center_vertical"
        app:layout_constraintTop_toBottomOf="@id/theme"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        tools:ignore="SpUsage" />


    <com.google.android.material.button.MaterialButton
            android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_theme" />


</androidx.constraintlayout.widget.ConstraintLayout>